added userEndpoint w/login-logout-register-profile
